; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/libbsm/extr_bsm_token.c_au_to_header32_tm.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/libbsm/extr_bsm_token.c_au_to_header32_tm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

@AUT_HEADER32 = common dso_local global i32 0, align 4
@AUDIT_HEADER_VERSION_OPENBSM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @au_to_header32_tm(i32 %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.timeval, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = bitcast %struct.timeval* %6 to i64*
  store i64 %3, i64* %13, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* null, i32** %11, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = load i32*, i32** %11, align 8
  %16 = call i32 @GET_TOKEN_AREA(i32* %14, i32* %15, i32 28)
  %17 = load i32*, i32** %10, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %47

20:                                               ; preds = %4
  %21 = load i32*, i32** %11, align 8
  %22 = load i32, i32* @AUT_HEADER32, align 4
  %23 = call i32 @ADD_U_CHAR(i32* %21, i32 %22)
  %24 = load i32*, i32** %11, align 8
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @ADD_U_INT32(i32* %24, i32 %25)
  %27 = load i32*, i32** %11, align 8
  %28 = load i32, i32* @AUDIT_HEADER_VERSION_OPENBSM, align 4
  %29 = call i32 @ADD_U_CHAR(i32* %27, i32 %28)
  %30 = load i32*, i32** %11, align 8
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @ADD_U_INT16(i32* %30, i32 %31)
  %33 = load i32*, i32** %11, align 8
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @ADD_U_INT16(i32* %33, i32 %34)
  %36 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = sdiv i32 %37, 1000
  store i32 %38, i32* %12, align 4
  %39 = load i32*, i32** %11, align 8
  %40 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @ADD_U_INT32(i32* %39, i32 %41)
  %43 = load i32*, i32** %11, align 8
  %44 = load i32, i32* %12, align 4
  %45 = call i32 @ADD_U_INT32(i32* %43, i32 %44)
  %46 = load i32*, i32** %10, align 8
  store i32* %46, i32** %5, align 8
  br label %47

47:                                               ; preds = %20, %19
  %48 = load i32*, i32** %5, align 8
  ret i32* %48
}

declare dso_local i32 @GET_TOKEN_AREA(i32*, i32*, i32) #1

declare dso_local i32 @ADD_U_CHAR(i32*, i32) #1

declare dso_local i32 @ADD_U_INT32(i32*, i32) #1

declare dso_local i32 @ADD_U_INT16(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
